--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
-  font-family: 'Helvetica Neue', system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family:
+    "Helvetica Neue", system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.2;
   /* font-weight: 400; */
 
