--- a/src/global.scss
+++ b/src/global.scss
@@ -1,8 +1,3 @@
-:root {
-  --tablet-breakpoint: 768px;
-  --desktop-breakpoint: 1440px;
-}
-
 *,
 *::before,
 *::after {
@@ -122,6 +117,42 @@ h6 {
 
 p {
   text-wrap: pretty;
+}
+
+h1 {
+  font-size: 56px;
+  font-style: normal;
+  font-weight: 700;
+
+  @media (min-width: 768px) {
+    font-size: 80px;
+  }
+}
+
+h2 {
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+
+  @media (min-width: 768px) {
+    font-size: 56px;
+  }
+}
+
+h3 {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+
+  @media (min-width: 768px) {
+    font-size: 32px;
+  }
+}
+
+h4 {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
 }
 
 #root {
