--- a/src/pages/Overview/OverviewTablet.css
+++ b/src/pages/Overview/OverviewTablet.css
@@ -82,7 +82,7 @@
 
 .tablet-svg {
     margin: 40px 0;
-    scale: 100%;
+    height: auto;
 }
 
 .timeline-section {
@@ -91,7 +91,6 @@
     height: 32px;
     align-items: center;
     gap: 12px;
-    display: flex;
 }
 
 .timeline-item>p {
