--- a/src/components/ui/Result/ResultCard.css
+++ b/src/components/ui/Result/ResultCard.css
@@ -13,3 +13,16 @@
   width: 304px;
   height: 460;
 }
+
+.resultCard h1{
+  font-size: clamp(2rem, 2.5vw, 3rem);
+}
+
+@media (min-width: 769px){
+  .resultCard{
+    width: 360px;
+    height: 460;
+
+  }
+
+}
