--- a/src/components/ui/Result/Skills.css
+++ b/src/components/ui/Result/Skills.css
@@ -1,4 +1,5 @@
-.skillSection {
+
+.skillBoxes{
   margin-top: 4rem;
   display: flex;
   justify-content: center;
@@ -7,7 +8,17 @@
   text-align: center;
 }
 
-.skillsContainer ul {
+.industrySection{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+
+.skillsContainer ul, .leadContainer ul {
+  width: 300px;
   padding: 0rem 1rem;
   margin-top: 1rem;
   list-style: none;
@@ -18,11 +29,11 @@
   gap: 1rem;
 }
 
-.skillsContainer h4 {
+.skillsContainer h4, .leadContainer h4 {
   font-size: 1.5rem;
 }
 
-.skillsContainer li {
+.skillsContainer li, .leadContainer li {
   background-color: #f95984;
   color: white;
   padding: 0.5rem;
@@ -32,32 +43,8 @@
   margin-top: 4rem;
 }
 
-.leadContainer h4 {
-  font-size: 1.5rem;
-}
 
-.leadContainer ul {
-  list-style: none;
-}
-
-.leadContainer ul {
-  padding: 0rem 1rem;
-  margin-top: 1rem;
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 1rem;
-}
-
-.leadContainer li {
-  background-color: #f95984;
-  color: white;
-  padding: 0.5rem;
-}
-
-.industryContainer {
+.industryContainer, .otherRolesContainer {
   margin-top: 4rem;
   padding: 0 1rem;
   text-align: center;
@@ -65,4 +52,48 @@
 
 .industryContainer h4 {
   font-size: 1.5rem;
+}
+
+.otherRolesContainer h4 {
+  font-size: 1.2rem;
+  color: #646676;
+}
+
+.otherRolesContainer li{
+  list-style: none;
+  background-color: #353c51;
+  margin-top: 2rem;
+  padding: 1rem 0rem;
+  color: white;
+  text-wrap: nowrap;
+  margin-inline: auto;
+}
+
+.otherRolesContainer a{
+  font-size: 1.2rem;
+  font-weight: 500;
+  width: fit-content;
+}
+
+.industryContainer p{
+  margin-top: 1rem;
+}
+
+
+@media (min-width: 769px){
+  .skillBoxes{
+    flex-direction: row;
+    flex-wrap: nowrap;
+    gap: 2rem;
+  }
+
+  .leadContainer{
+    margin-top: 0;
+  }
+
+  .industryContainer p{
+    margin: 1rem 3rem;
+    max-width: 800px;
+  }
+
 }
