--- a/src/components/ui/Role/Role.css
+++ b/src/components/ui/Role/Role.css
@@ -1,3 +1,4 @@
+
 .roleComp {
   /* background-color: aquamarine; */
   padding: 1rem;
@@ -21,4 +22,19 @@
   width: 262px;
   height: auto;
   text-wrap: nowrap;
+}
+
+
+@media (min-width: 769px){
+
+  .roleComp {
+    /* background-color: aquamarine; */
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column-reverse;
+    gap: 1rem;
+  }
+  
 }
