--- a/src/pages/RolesPage/RolesPage.css
+++ b/src/pages/RolesPage/RolesPage.css
@@ -42,12 +42,6 @@
   transition: 0.3s;
 }
 
-.arrow {
-  /* background-color: red; */
-  width: 15rem;
-  border: 4px dashed;
-  color: #ebeae8;
-}
 
 .quiz-btn:hover {
   cursor: pointer;
@@ -55,7 +49,7 @@
 }
 
 .pegboard-container {
-  width: 294px;
+  width: 302px;
   height: 2027px;
   /* border: 2px solid red; */
   position: relative;
@@ -68,9 +62,75 @@
   gap: 2rem;
 }
 
-.boardSVG {
+.phonePegboard {
   position: absolute;
   /* shortcut for everything to be zero */
   inset: 0;
   z-index: -1;
 }
+
+.tabletPegboard, .desktopPegboard{
+  display: none;
+}
+
+
+@media (min-width: 769px){
+
+  .phonePegboard {
+    display: none;
+  }
+
+  .tabletPegboard{
+    position: absolute;
+    display: block;
+    z-index: -1;
+    }
+
+  .pegboard-container {
+    width: 638px;
+    height: 1118px;
+    position: relative;
+    margin-inline: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .quiz-titles {
+    flex-direction: row;
+  }
+
+  .quiz-btn{
+    margin: 0;
+  }
+
+}
+
+@media (min-width: 1440px){
+
+  .tabletPegboard {
+    display: none;
+  }
+
+  .desktopPegboard{
+    position: absolute;
+    display: block;
+    z-index: -1;
+    }
+
+  .pegboard-container {
+    width: 1172px;
+    height: 733px;
+    position: relative;
+    margin-inline: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+}
+
