--- a/src/App.scss
+++ b/src/App.scss
@@ -7,19 +7,5 @@
   flex-direction: column;
   gap: 1rem;
   align-items: center;
-
-  select {
-    max-width: 300px;
-    width: 100%;
-    margin-inline: auto;
-    font-family: 'Funnel Display';
-    padding: 0.5rem;
-  }
-
-  .icon-container {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    justify-content: center;
-  }
+  padding-bottom: 500px;
 }
