--- a/src/pages/RolesPage/RolesPage.css
+++ b/src/pages/RolesPage/RolesPage.css
@@ -42,7 +42,6 @@
   transition: 0.3s;
 }
 
-
 .quiz-btn:hover {
   cursor: pointer;
   background-color: #646676;
@@ -69,22 +68,21 @@
   z-index: -1;
 }
 
-.tabletPegboard, .desktopPegboard{
+.tabletPegboard,
+.desktopPegboard {
   display: none;
 }
 
-
-@media (min-width: 769px){
-
+@media (min-width: 769px) {
   .phonePegboard {
     display: none;
   }
 
-  .tabletPegboard{
+  .tabletPegboard {
     position: absolute;
     display: block;
     z-index: -1;
-    }
+  }
 
   .pegboard-container {
     width: 638px;
@@ -102,23 +100,21 @@
     flex-direction: row;
   }
 
-  .quiz-btn{
+  .quiz-btn {
     margin: 0;
   }
-
 }
 
-@media (min-width: 1440px){
-
+@media (min-width: 1440px) {
   .tabletPegboard {
     display: none;
   }
 
-  .desktopPegboard{
+  .desktopPegboard {
     position: absolute;
     display: block;
     z-index: -1;
-    }
+  }
 
   .pegboard-container {
     width: 1172px;
@@ -131,6 +127,4 @@
     flex-direction: row;
     flex-wrap: wrap;
   }
-
 }
-
