--- a/src/components/ui/PersonalityQuiz/QuizVector/QuizVector.scss
+++ b/src/components/ui/PersonalityQuiz/QuizVector/QuizVector.scss
@@ -1,7 +1,7 @@
 .quizVectorContainer {
   padding-block: 4px;
   width: 100%;
-  height: 100%;
+  height: 24px;
 
   .quizVector {
     display: flex;
