--- a/src/pages/FAQpage/FAQstyle.scss
+++ b/src/pages/FAQpage/FAQstyle.scss
@@ -1,23 +1,67 @@
-.MuiAccordion-root.overall-accordion{
-    &:before {
-      display: none,
-    }
-    
-    border-radius: 0 !important;
-    margin-bottom: 16px;
-
-    background-color: #32673f;
-
-    //when dropdown is expanded
-    &.Mui-expanded {
-      border-radius: 0 !important;
-      margin-bottom: 16px;
-    }       
-    
-    
+h1{
+    text-align: center;
+    color: #353C51;
 }
 
-#answer{
+body{
+    background-color: white;
+}
+
+.AccordionItem {
+    overflow: hidden;
+    margin-top: 1px;
+}
+
+.AccordionHeader {
+    display: flex;
+}
+
+.AccordionQuestion {
+    background-color: transparent;
     text-align: left;
-    
+    color: #353C51;
+    font-family: inherit;
+    padding: 0 20px;
+    height: 45px;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 15px;
+    border: none;
+
+}
+
+.AccordionContent {
+    text-align: left;
+    color: #353C51;
+    overflow: hidden;
+    font-size: 15px;
+    color: var(--mauve-11);
+    background-color: var(--mauve-2);
+}
+
+.AccordionContent[data-state="open"] {
+    animation: slideDown 300ms cubic-bezier(0.87, 0, 0.13, 1);
+}
+.AccordionContent[data-state="closed"] {
+    animation: slideUp 300ms cubic-bezier(0.87, 0, 0.13, 1);
+}
+
+@keyframes slideDown {
+    from {
+        height: 0;
+    }
+    to {
+        height: var(--radix-accordion-content-height);
+    }
+}
+
+@keyframes slideUp {
+    from {
+        height: var(--radix-accordion-content-height);
+    }
+    to {
+        height: 0;
+    }
 }
