--- a/src/components/ui/PersonalityQuiz/PersonalityQuiz.scss
+++ b/src/components/ui/PersonalityQuiz/PersonalityQuiz.scss
@@ -123,7 +123,7 @@
 
   .selected {
     position: relative;
-    pointer-events: none;
+    cursor: pointer;
 
     &::before {
       content: '';
