--- a/src/pages/FAQpage/FAQstyle.scss
+++ b/src/pages/FAQpage/FAQstyle.scss
@@ -1,67 +1,92 @@
-h1{
-    text-align: center;
-    color: #353C51;
+h1 {
+  text-align: center;
+  color: #353c51;
 }
 
-body{
-    background-color: white;
+body {
+  background-color: white;
 }
 
+.AccordionRoot {
+  max-width: 641px;
+}
 .AccordionItem {
-    overflow: hidden;
-    margin-top: 1px;
+  overflow: hidden;
+  margin-top: 1px;
+  border: 4px solid black;
+  border-left: none;
+  border-right: none;
+  position: relative;
+
+  &::before,
+  &::after {
+    content: '';
+    position: absolute;
+    background-image: linear-gradient(to top, black 50%, transparent 50%);
+    background-repeat: repeat-y;
+    background-size: 4px 10px;
+    width: 4px;
+    height: 100%;
+  }
+
+  &::after {
+    top: 0;
+    right: 0;
+  }
 }
 
 .AccordionHeader {
-    display: flex;
+  display: flex;
 }
 
 .AccordionQuestion {
-    background-color: transparent;
-    text-align: left;
-    color: #353C51;
-    font-family: inherit;
-    padding: 0 20px;
-    height: 45px;
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 15px;
-    border: none;
-
+  background-color: transparent;
+  text-align: left;
+  color: #353c51;
+  font-family: inherit;
+  height: 45px;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 641px;
+  font-size: 15px;
+  border: none;
+  padding: 20px;
 }
 
 .AccordionContent {
-    text-align: left;
-    color: #353C51;
-    overflow: hidden;
-    font-size: 15px;
-    color: var(--mauve-11);
-    background-color: var(--mauve-2);
+  text-align: left;
+  color: #353c51;
+  overflow: hidden;
+  font-size: 15px;
+  width: 100%;
+  max-width: 641px;
+  padding-inline: 20px;
 }
 
-.AccordionContent[data-state="open"] {
-    animation: slideDown 300ms cubic-bezier(0.87, 0, 0.13, 1);
+.AccordionContent[data-state='open'] {
+  animation: slideDown 0.2s cubic-bezier(0.87, 0, 0.13, 1);
 }
-.AccordionContent[data-state="closed"] {
-    animation: slideUp 300ms cubic-bezier(0.87, 0, 0.13, 1);
+.AccordionContent[data-state='closed'] {
+  animation: slideUp 0.2s cubic-bezier(0.87, 0, 0.13, 1);
 }
 
 @keyframes slideDown {
-    from {
-        height: 0;
-    }
-    to {
-        height: var(--radix-accordion-content-height);
-    }
+  from {
+    height: 0;
+  }
+  to {
+    height: var(--radix-accordion-content-height);
+  }
 }
 
 @keyframes slideUp {
-    from {
-        height: var(--radix-accordion-content-height);
-    }
-    to {
-        height: 0;
-    }
+  from {
+    height: var(--radix-accordion-content-height);
+  }
+  to {
+    height: 0;
+  }
 }
