--- a/src/global.scss
+++ b/src/global.scss
@@ -19,6 +19,14 @@
 
 @font-face {
   font-display: swap;
+  font-family: 'Funnel Display';
+  font-style: normal;
+  font-weight: 500;
+  src: url('./assets/fonts/funnel-display-medium.woff2') format('woff2');
+}
+
+@font-face {
+  font-display: swap;
   font-family: 'Funnel Sans';
   font-style: normal;
   font-weight: 400;
