--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -14,7 +14,7 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-  font-family: "Funnel Display";
+  font-family: 'Funnel Display';
 
   &:is(:hover, :focus-visible) {
     background-color: #4f576d;
