--- a/src/components/ui/Pegboard/HeroSection.scss
+++ b/src/components/ui/Pegboard/HeroSection.scss
@@ -1,26 +1,112 @@
 #pegboard-section {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+  margin-inline: auto;
+
+  --section-max-width: 393px;
+
+  @media (min-width: 769px) {
+    --section-max-width: 641px;
+  }
+
+  @media (min-width: 1440px) {
+    --section-max-width: 1018px;
+  }
 
   #title-container {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    margin-inline: auto;
-    gap: 0.25rem;
+    gap: 0.5rem;
+    height: calc(4lh + 5rem);
+
+    > div {
+      display: flex;
+      flex-direction: column;
+      gap: 0.25rem;
+      height: 100%;
+    }
+
+    @media (min-width: 370px) {
+      height: calc(3lh + 5rem);
+    }
+
+    @media (min-width: 769px) {
+      margin-inline: auto;
+      text-align: center;
+      gap: 0;
+
+      > div {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 1.5rem;
+      }
+    }
 
     @media (min-width: 1440px) {
       flex-direction: row;
       height: calc(2lh + 3.5rem);
       gap: 2rem;
       align-items: center;
+
+      > div {
+        gap: 2rem;
+      }
     }
 
-    h2 {
-      font-size: 2.375rem;
-      font-weight: 500;
+    .title-text {
+      font-size: 2.5rem;
+      font-weight: 600;
+      font-family: 'Funnel Sans';
+      line-height: 1.1;
+
+      @media (min-width: 370px) {
+        line-height: normal;
+      }
     }
+  }
+
+  .icon-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 16px;
+    margin-top: var(--L);
+
+    @media (min-width: 769px) {
+      flex-direction: row;
+    }
+
+    @media (min-width: 1440px) {
+      margin-top: var(--XL);
+      justify-content: space-between;
+    }
+
+    .icon-line {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      gap: 12px;
+      &:last-child p {
+        max-width: 30ch;
+
+        @media (min-width: 769px) {
+          max-width: 100%;
+        }
+      }
+    }
+
+    .icon-line > p {
+      font-family: 'Funnel Sans';
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+      color: #646676;
+    }
+  }
+
+  #home-pegboard-container {
+    margin-block: var(--M);
   }
 
   .keen-slider__slide > div {
