--- a/src/pages/Home/ExpectationsSection/ExpectationsSection.scss
+++ b/src/pages/Home/ExpectationsSection/ExpectationsSection.scss
@@ -2,6 +2,20 @@
   .expectation-section {
     width: 100%;
     gap: var(--M) 0;
+
+    h2 {
+      font-family: 'Funnel Display';
+      font-size: 40px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 100%; /* 40px */
+      letter-spacing: 0.4px;
+      text-align: left;
+
+      @media (min-width: 769px) {
+        text-align: center;
+      }
+    }
   }
 
   .expectation-text {
@@ -39,6 +53,9 @@
       display: flex;
       gap: var(--XS, 12px) var(--S, 24px);
       flex-wrap: nowrap;
+      justify-content: space-between;
+      max-width: 641px;
+      margin-inline: auto;
     }
 
     .expectation-row {
@@ -57,9 +74,8 @@
     .benefits {
       flex-direction: row;
       flex-wrap: wrap;
-      gap: 40px;
+      gap: 10px 40px;
       justify-content: center;
-      line-height: 0;
     }
   }
 
@@ -69,6 +85,10 @@
       flex-direction: column;
       align-items: center;
       gap: var(--M, 40px);
+    }
+
+    .benefits {
+      justify-content: space-between;
     }
   }
 }
