feat: add font preloading and adjust pegboard cursor style

--- a/src/components/ui/Pegboard/PegboardFilled.css
+++ b/src/components/ui/Pegboard/PegboardFilled.css
@@ -2,6 +2,11 @@
   position: relative;
   width: 100%;
   height: 100%;
+  cursor: grab;
+
+  &:active {
+    cursor: grabbing;
+  }
 
   svg {
     max-width: none;
