--- a/src/global.scss
+++ b/src/global.scss
@@ -16,7 +16,7 @@
   font-family: 'Funnel Display';
   font-style: normal;
   font-weight: 700;
-  src: url('./assets/fonts/funnel-display-bold.woff2') format('woff2');
+  src: url('/fonts/funnel-display-bold.woff2') format('woff2');
 }
 
 @font-face {
@@ -24,7 +24,7 @@
   font-family: 'Funnel Display';
   font-style: normal;
   font-weight: 500;
-  src: url('./assets/fonts/funnel-display-medium.woff2') format('woff2');
+  src: url('/fonts/funnel-display-medium.woff2') format('woff2');
 }
 
 @font-face {
@@ -32,7 +32,7 @@
   font-family: 'Funnel Sans';
   font-style: normal;
   font-weight: 400;
-  src: url('./assets/fonts/funnel-sans-regular.woff2') format('woff2');
+  src: url('/fonts/funnel-sans-regular.woff2') format('woff2');
 }
 
 @font-face {
@@ -40,7 +40,7 @@
   font-family: 'Funnel Sans';
   font-style: normal;
   font-weight: 700;
-  src: url('./assets/fonts/funnel-sans-bold.woff2') format('woff2');
+  src: url('/fonts/funnel-sans-bold.woff2') format('woff2');
 }
 
 @font-face {
@@ -48,7 +48,7 @@
   font-family: 'Funnel Sans';
   font-style: normal;
   font-weight: 500;
-  src: url('./assets/fonts/funnel-sans-medium.woff2') format('woff2');
+  src: url('/fonts/funnel-sans-medium.woff2') format('woff2');
 }
 
 * {
