fix: add missing semibold font

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -36,6 +36,8 @@ nav {
       text-decoration: none;
       color: #353c51;
       position: relative;
+      font-family: 'Funnel Display';
+      font-weight: 500;
 
       &::before {
         content: '';
