--- a/src/components/ui/CTACards/CTACards.css
+++ b/src/components/ui/CTACards/CTACards.css
@@ -28,7 +28,7 @@
   top: 15%;
   left: 60%;
   font-size: 2.5rem;
-  line-height: clamp(2.4rem, 3vw, 4rem);
+  line-height: 2.5rem;
   width: 300px;
   text-align: left;
 }
@@ -38,7 +38,7 @@
   left: 70%;
   list-style: none;
   background-color: #353c51;
-  padding: 1rem 2rem;
+  padding: 1rem 0rem;
   width: 8rem;
   color: white;
   text-transform: uppercase;
@@ -49,7 +49,7 @@
   top: 15%;
   left: 60%;
   font-size: 2.5rem;
-  line-height: clamp(2.4rem, 3vw, 4rem);
+  line-height: 2.5rem;
   width: 300px;
   text-align: left;
   color: white;
