--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,6 +1,7 @@
 nav {
-  padding: 0;
-  padding-left: 1rem;
+  // Hamburger has some padding already to make it easier to click
+  padding-left: 1.5rem;
+  padding-right: 0.5rem;
 
   @media (min-width: 769px) {
     padding: 1rem;
