--- a/src/components/ui/Role/Role.css
+++ b/src/components/ui/Role/Role.css
@@ -1,32 +1,33 @@
 .roleComp {
   /* background-color: aquamarine; */
-  padding: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column-reverse;
   gap: 1rem;
+  align-self: start;
+  min-width: 0;
+  width: 262px;
 }
 
 .roleTitle {
   /* border: 1px solid black; */
-  background-color: #353c51;
-  padding: 0.2rem 3.5rem;
-  border-radius: 0.5rem;
-  font-weight: 400;
-  color: rgb(255, 255, 255);
   text-align: center;
-  border-radius: 0;
-  font-size: 1.1rem;
-  width: 262px;
-  height: auto;
-  text-wrap: nowrap;
+  padding: 0.5rem 0.75rem;
+  background-color: #353c51;
+  color: #fff;
+  font-family: 'Funnel Sans';
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.24px;
+  width: 100%;
 }
 
 @media (min-width: 769px) {
   .roleComp {
     /* background-color: aquamarine; */
-    padding: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
