--- a/src/pages/Overview/Overview.scss
+++ b/src/pages/Overview/Overview.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   gap: var(--XL);
+  color: #353C51;
 
   @media (min-width: 769px) {
     display: none;
@@ -150,22 +151,30 @@
 #overview-tablet-container {
   display: none;
   min-width: 769px;
-  padding: var(--XXL, 120px) var(--L, 64px);
+  padding: 0 var(--L, 64px) var(--XXL, 120px) var(--L, 64px);
   flex-direction: column;
   align-items: center;
   gap: var(--XL, 40px);
-
+  color: #353C51;
+  
   @media (min-width: 769px) and (max-width: 1439px) {
     display: flex;
   }
 
   .tablet-title {
     max-width: 480px;
+    padding-top: 44px;
     align-self: stretch;
     font-size: 80px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+  }
+
+  .tablet-section {
+    display: flex;
+    flex-direction: column;
+    gap: var(--M);
   }
 
   .tablet-heading1 {
@@ -204,7 +213,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    gap: 60px;
+    gap: var(--M);
     width: 100%;
   }
 
@@ -212,10 +221,17 @@
     flex: 1;
   }
 
-  .quiz-link {
+  .tablet-quiz-link {
+    display: flex;
+    flex-direction: row;
     align-items: center;
-    padding: 20px;
+    padding: 20px 0;
     justify-content: center;
+    gap: 24px;
+  }
+
+  .tablet-quiz-link > h2 {
+    align-self: center;
   }
 
   .tablet-column-heading {
@@ -231,10 +247,9 @@
     background-color: #353c51;
     color: #fffffe;
   }
-
-  .tablet-svg {
-    margin: 40px 0;
-    height: auto;
+  
+  .tablet-svg  {
+    width: 100%;
   }
 
   .timeline-section {
@@ -299,6 +314,7 @@
   align-items: center;
   gap: var(--XXL, 80px);
   margin: 0 auto;
+  color: #353C51;
 
   @media (min-width: 1440px) {
     display: flex;
