--- a/src/components/ui/Dropdown/Dropdown.scss
+++ b/src/components/ui/Dropdown/Dropdown.scss
@@ -31,6 +31,10 @@
   display: flex;
   align-items: center;
 
+  > button {
+    height: fit-content;
+  }
+
   .selected-role {
     font-size: 1.5rem;
     height: calc(1lh + 2.5rem);
