--- a/src/components/ui/Pegboard/HeroSection.scss
+++ b/src/components/ui/Pegboard/HeroSection.scss
@@ -30,9 +30,14 @@
         gap: 0.25rem;
       }
 
-      #dropdown-container {
+      #dropdown-button-container {
         display: flex;
         gap: 0.75rem;
+        align-items: center;
+
+        > button {
+          height: fit-content;
+        }
       }
 
       @media (min-width: 387px) {
