--- a/src/global.scss
+++ b/src/global.scss
@@ -1,7 +1,9 @@
 :root {
+  --XXL: 120px;
   --XL: 80px;
   --L: 64px;
   --M: 40px;
+  --S: 24px;
   --XS: 12px;
 }
 
@@ -136,7 +138,7 @@ h6 {
     'Open Sans',
     'Helvetica Neue',
     sans-serif;
-  text-wrap: balance;
+  text-wrap: pretty;
 }
 
 p,
