--- a/src/components/ui/Role/Role.css
+++ b/src/components/ui/Role/Role.css
@@ -4,10 +4,17 @@
   justify-content: center;
   align-items: center;
   flex-direction: column-reverse;
-  gap: 1rem;
+  gap: 0.5rem;
   align-self: start;
   min-width: 0;
   width: 262px;
+  margin-inline: auto;
+  transition: transform 0.15s ease-in-out;
+
+  &:hover {
+    cursor: pointer;
+    transform: scale(1.05);
+  }
 }
 
 .roleTitle {
@@ -32,6 +39,6 @@
     justify-content: center;
     align-items: center;
     flex-direction: column-reverse;
-    gap: 1rem;
+    gap: 0.5rem;
   }
 }
