feat: finalize roles page styling and add CTASection component

--- a/src/components/CTACard/CTACard.scss
+++ b/src/components/CTACard/CTACard.scss
@@ -15,6 +15,7 @@
     flex-direction: column;
     justify-content: space-between;
     color: var(--background-color);
+    font-family: 'Funnel Display';
 
     p {
       max-width: 10ch;
