--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,6 +1,6 @@
 .cta-button {
   display: flex;
-  padding: 12px 24px;
+  padding: 11px 18px;
   justify-content: center;
   align-items: center;
   gap: 12px;
@@ -18,6 +18,10 @@
   line-height: normal;
   font-family: 'Funnel Display';
   text-decoration: none;
+
+  @media (min-width: 768px) {
+    padding: 12px 40px;
+  }
 
   &:is(:hover, :focus-visible) {
     color: #353c51;
