--- a/src/components/ui/Pegboard/HeroSection.scss
+++ b/src/components/ui/Pegboard/HeroSection.scss
@@ -35,8 +35,12 @@
         gap: 0.75rem;
         align-items: center;
 
-        > button {
+        .play-button {
           height: fit-content;
+          display: none;
+          @media (min-width: 388px) {
+            display: block;
+          }
         }
       }
 
